# bakaos

./: Cargo.toml  Makefile
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: inspect.yml  pr.yml  report-junit.yml
kernel/: Cargo.toml
kernel/src/: kernel.rs  main.rs
libraries/address-v2/: Cargo.toml
libraries/address-v2/src/: addr_base.rs  addr_range_base.rs  lib.rs  paddr_range.rs  page_base.rs  page_range_base.rs  phys_addr.rs  phys_addr_range.rs  phys_page_range.rs  range_base.rs  vaddr_range.rs  virt_addr.rs  virt_addr_range.rs  virt_page.rs  virt_page_range.rs
libraries/address/src/: addr_base.rs  addr_range_base.rs  lib.rs  page_base.rs  page_range_base.rs  phys_addr_range.rs  phys_page.rs  virt_page_range.rs
libraries/allocation/: Cargo.toml
libraries/allocation-abstractions/src/: frame.rs  lib.rs
libraries/allocation/src/: lib.rs
libraries/global_heap/: Cargo.toml
libraries/global_heap/src/: lib.rs
libraries/kernel-abstractions/src/: lib.rs
libraries/linux-loader/: Cargo.toml
libraries/linux-loader/src/: elf.rs  loader.rs  stack.rs
libraries/linux-task/: Cargo.toml
libraries/linux-task/src/: process.rs
libraries/memory-space/: Cargo.toml
libraries/memory-space/src/: mapping.rs  memory.rs
libraries/mmu-abstractions/: Cargo.toml
libraries/mmu-abstractions/src/: lib.rs
libraries/mmu-native/: Cargo.toml
libraries/mmu-native/src/: lib.rs  pt.rs  pte.rs
libraries/mmu-native/src/arch/: mod.rs
libraries/platform-specific/: Cargo.toml
libraries/runtime/: Cargo.toml  build.rs
libraries/runtime-macros/: Cargo.toml
libraries/runtime-macros/src/: lib.rs
libraries/runtime-std/: .gitignore  Cargo.toml  build.rs
libraries/runtime-std/src/: lib.rs  std_compat.rs
libraries/runtime-std/src/utils/: mod.rs  symbol_ptr.rs
libraries/runtime-test/: Cargo.toml
libraries/runtime-test/src/: lib.rs
libraries/runtime/src/: lib.rs  utils.rs
libraries/runtime/src/baremetal/: bss.rs  mod.rs
libraries/runtime/src/baremetal/arch/riscv64/: boot.S  mod.rs  serial.rs  vm.rs
libraries/runtime/src/baremetal/cpu/: cls.rs  mod.rs
libraries/stream/: Cargo.toml
libraries/stream/src/: lib.rs
libraries/template/: Cargo.toml
libraries/template/src/: lib.rs
libraries/timing/src/: std_conversions.rs  timespan.rs  timeval.rs
libraries/utilities/src/: invoke_on_drop.rs
linux-syscalls/: Cargo.toml
linux-syscalls/src/: sys_clone.rs  sys_execve.rs  sys_mmap.rs  sys_nanosleep.rs  sys_uname.rs  sys_write.rs
syscalls/src/: sys_write.rs
test-runner/: Cargo.toml  build.rs
test-runner/.cargo/: config.toml
test-runner/linker/: riscv64-virt.ld
test-runner/src/: heap.rs  main.rs
test-utilities/: Cargo.toml
test-utilities/src/: kernel.rs  lib.rs  memory.rs
test-utilities/src/allocation/: contiguous.rs  mod.rs  segment.rs
(+1 files in other folders)
