[package]
name = "test-runner"
version = "0.1.0"
edition = "2024"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
runtime = { path = "../libraries/runtime", features = ["binary_crate"] }
template = { path = "../libraries/template" }

[target.'cfg(target_os = "none")'.dependencies]
buddy_system_allocator = { git = "https://github.com/neuq-rcore/buddy_system_allocator" }
