[package]
name = "template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = { version = "0.2", default-features = false, optional = true }
hashbrown = { version = "0.16.0", optional = true }

[build-dependencies]
regex = "1"

[features]
default = []
std = []
alloc = []
unstable = []
compat_hash = ["hashbrown"]
compat_libc = ["libc"]