[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
runtime-std = { path = "../runtime-std" }
runtime-test = { path = "../runtime-test" }
runtime-macros = { path = "../runtime-macros" }

[build-dependencies]
serde_json = "1.0"

[target.'cfg(target_arch = "riscv64")'.dependencies]
riscv = "0.12"
sbi-rt = "0.0.3"
paste = "1.0"

[features]
default = []

# This feature should only be used by rust binary crates.
# for example, the kernel crate.
binary_crate = ["boot"]
boot = []
